--- a/app/templates/aportes/delete.html
+++ b/app/templates/aportes/delete.html
@@ -12,7 +12,7 @@
   </p>
 
   <div class="flex justify-center gap-4">
-    <a href="{{ url_for('aportes.aportes') }}" class="btn">Cancelar</a>
+    <a href="{{ url_for('aportes.index') }}" class="btn">Cancelar</a>
     <button type="submit" class="btn btn-error">Eliminar</button>
   </div>
 </form>
